# SI-FII

Tema1/: CMakeLists.txt  README.txt  main.cpp
Tema1/Exercitiu1/: CMakeLists.txt  README.txt  exercitiul1.cpp
Tema1/Exercitiu1/text/: cryptoText.txt  plainText.txt
Tema1/Exercitiu2/: CMakeLists.txt  Main.cpp  README.txt  exercitiul2.cpp
Tema1/Exercitiu2/text/: file1.txt  file2.txt  hash1_md5.txt  hash1_sha256.txt  hash2_md5.txt  hash2_sha256.txt
Tema1/Exercitiu3/: CMakeLists.txt  README.txt
Tema1/Exercitiu3/include/: AESKey.h  CbcKey.h  CommNode.h  CtrKey.h  EcbKey.h  KeyManager.h
Tema1/Exercitiu3/src/: CbcKey.cpp  CommNode.cpp  CtrKey.cpp  EcbKey.cpp  KeyManager.cpp  Main.cpp
Tema1/Exercitiu3/text/: message.txt
Tema1/text/: cryptoText.txt
